--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,16 +57,15 @@ footer>p {
 .player {
     background-color: blue;
     float: left;
-    width: 35%;
-    height: 240px;
-
+    width: 40%;
+    height: 280px
 }
 
 .computer {
     background-color: red;
     float: right;
-    width: 35%;
-    height: 240px;
+    width: 40%;
+    height: 280px;
 }
 
 #messages {
@@ -84,4 +83,9 @@ footer>p {
     width: 50%;
     height: 55%;
     position: relative;
+}
+
+#text {
+    text-align: left;
+    padding-top: 1px;
 }
