--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ footer>p {
 }
 
 .computer {
-    background-color: blue;
+    background-color: red;
     float: right;
     width: 30%;
     height: 290px;
@@ -77,7 +77,7 @@ footer>p {
 
 #messages2 {
     height: 0px;
-    margin-bottom: -50px;
+    padding-top: 50px;
 
 }
 
