--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,15 +49,16 @@ footer>p {
 .selector {
     display: inline-block;
     margin: 15px;
-    width: 150px;
-    height: 30px;
+    width: 100%;
+    max-width: 150px;
+
 }
 
 
 .player {
     background-color: blue;
     float: left;
-    width: 30%;
+    width: 100%;
     height: 290px;
 
 }
@@ -65,7 +66,7 @@ footer>p {
 .computer {
     background-color: red;
     float: right;
-    width: 30%;
+    width: 100%;
     height: 290px;
 }
 
@@ -77,22 +78,17 @@ footer>p {
 
 }
 
-#messages2 {
-    height: 0px;
-    padding-top: 50px;
-
-}
 
 #player-image {
-    width: 50%;
-    height: 55%;
-    position: relative;
+    width: 100%;
+    height: auto;
+    /* Ensures images are responsive */
 }
 
 #computer-image {
-    width: 50%;
-    height: 55%;
-    position: relative;
+    width: 100%;
+    height: auto;
+    /* Ensures images are responsive */
 }
 
 .round {
@@ -106,4 +102,14 @@ footer>p {
 
 #computer-round {
     padding-top: 0.3px;
+}
+
+/* Media Query for small screens */
+@media screen and (max-width: 768px) {
+    .selector {
+        width: 100%;
+        /* Full width for small screens */
+        max-width: none;
+
+    }
 }
