--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ footer>p {
 }
 
 .computer {
-    background-color: red;
+    background-color: green;
     float: right;
     width: 30%;
     height: 290px;
