--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ html {
 
 body {
     font-family: oswald, sans serif;
-    background-color: whitesmoke;
+    background-color: lightslategray;
 }
 
 
