--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ footer>p {
 
 
 .player {
-    background-color: blue;
+    background-color: green;
     float: left;
     width: 30%;
     height: 290px;
@@ -121,5 +121,10 @@ footer>p {
 
     }
 
+    .player,
+    .computer {
+        width: 100%;
+        float: none;
 
+    }
 }
