--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-    font-family: oswald, sans serif;
+    font-family: 'oswald', sans serif;
     background-color: gray;
 }
 
@@ -72,12 +72,8 @@ footer>p {
 
 
 #messages {
-    max-height: 200px;
-    /* Set a maximum height for the messages area */
-    overflow: auto;
-    /* Add scroll if content exceeds the max height */
-    padding-top: 10px;
-    /* Adjusted padding to create space */
+    height: 0px;
+    padding-top: 60px;
 }
 
 
