--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,8 @@ html {
 body {
     font-family: 'oswald', sans serif;
     background-color: gray;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -21,10 +23,10 @@ header {
 }
 
 footer {
-    /* remove absolute*/
+    position: absolute;
     width: 100%;
     min-height: 50px;
-    /* remove 0 bottom*/
+    bottom: 0;
     left: 0;
     box-sizing: border-box;
     padding-top: 1px;
