--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
     font-family: 'oswald', sans serif;
     background-color: gray;
 
+
 }
 
 
@@ -24,7 +25,7 @@ header {
 footer {
     position: absolute;
     width: 100%;
-    min-height: 50px;
+    min-height: 25px;
     bottom: 0;
     left: 0;
     box-sizing: border-box;
@@ -45,6 +46,7 @@ footer>p {
     margin-right: auto;
     margin-top: 1%;
     text-align: center;
+    margin-bottom: 50px;
 }
 
 .selector {
