--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,14 @@ html {
 body {
     font-family: 'oswald', sans serif;
     background-color: gray;
-
-
-
+    margin: 0;
+    /* Remove default margin */
+    padding: 0;
+    /* Remove default padding */
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    /* Ensure at least 100% viewport height */
 }
 
 
@@ -24,16 +29,16 @@ header {
 }
 
 footer {
-    position: relative;
+
     width: 100%;
+    height: 25px;
     min-height: 25px;
-    bottom: 0;
-    left: 0;
     box-sizing: border-box;
     padding-top: 1px;
     text-align: center;
     color: gray;
     background-color: black;
+    margin-top: auto;
 }
 
 footer>p {
