--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,9 @@ html {
 body {
     font-family: 'oswald', sans serif;
     background-color: gray;
-    margin: 0;
-    /* Remove default margin */
-    padding: 0;
-    /* Remove default padding */
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    /* Ensure at least 100% viewport height */
+
+
+
 }
 
 
@@ -29,16 +24,17 @@ header {
 }
 
 footer {
-
+    position: absolute;
     width: 100%;
     height: 25px;
     min-height: 25px;
+    bottom: 0;
+    left: 0;
     box-sizing: border-box;
     padding-top: 1px;
     text-align: center;
     color: gray;
     background-color: black;
-    margin-top: auto;
 }
 
 footer>p {
