--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ header {
 footer {
     position: absolute;
     width: 100%;
-    height: 25px;
+    height: 160px;
     min-height: 25px;
     bottom: 0;
     left: 0;
@@ -79,8 +79,14 @@ footer>p {
 #messages {
     height: 0px;
     padding-top: 60px;
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+
+
 }
 
+#message-box {}
 
 
 
