--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,7 @@ footer>p {
 .round {
     text-align: left;
     padding-top: 0.5px;
+    padding-left: 5px;
 }
 
 #player-round {
@@ -134,5 +135,12 @@ footer>p {
         display: none;
     }
 
+    footer {
+        display: none;
+    }
+
+    .computer {
+        width: 100%;
+    }
 
 }
