--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ footer>p {
     background-color: green;
     float: left;
     width: 30%;
-    height: 290px;
+
 
 }
 
@@ -71,7 +71,7 @@ footer>p {
     background-color: red;
     float: right;
     width: 30%;
-    height: 290px;
+
 }
 
 
@@ -85,13 +85,13 @@ footer>p {
 
 #player-image {
     width: 50%;
-    height: 55%;
+    height: auto;
     position: relative;
 }
 
 #computer-image {
     width: 50%;
-    height: 55%;
+    height: auto;
     position: relative;
 }
 
