--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ header {
 footer {
     position: absolute;
     width: 100%;
-    height: 160px;
+    height: 140px;
     min-height: 25px;
     bottom: 0;
     left: 0;
@@ -34,7 +34,7 @@ footer {
 }
 
 footer>p {
-    font-size: 20px
+    font-size: 16px
 }
 
 /* Game area*/
@@ -127,5 +127,12 @@ footer>p {
 
     .computer {
         width: 100%;
+    }
+}
+
+/* Media query for smaller screnes*/
+@media only screen and (min-width: 1000px) {
+    footer {
+        display: none;
     }
 }
