--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ footer>p {
 
 #messages {
     height: 0px;
-    padding-top: 60px;
+    padding-top: 40px;
 }
 
 #player-image {
@@ -132,4 +132,19 @@ footer>p {
     footer {
         display: none;
     }
+
+    .player {
+        background-color: blue;
+        float: left;
+        height: 350px;
+        width: 300px;
+    }
+
+    .computer {
+        background-color: red;
+        float: left;
+        height: 350px;
+        width: 300px;
+    }
+
 }
