--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html {
 
 body {
     font-family: 'oswald', sans serif;
-    background-color: lightgray;
+    background-color: grey;
     margin: 0;
     padding: 0;
 }
@@ -82,7 +82,7 @@ footer>p {
 }
 
 .round {
-    text-align: left;
+    text-align: center;
     padding-top: 0.5px;
     padding-left: 5px;
 }
@@ -142,7 +142,7 @@ footer>p {
 
     .computer {
         background-color: red;
-        float: left;
+        float: right;
         height: 350px;
         width: 300px;
     }
