--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html {
 
 body {
     font-family: 'oswald', sans serif;
-    background-color: grey;
+    background-color: rgb(169, 169, 169);
     margin: 0;
     padding: 0;
 }
@@ -17,6 +17,9 @@ body {
 header {
     text-align: center;
     margin: auto;
+    background-color: rgb(169, 169, 169);
+    color: black;
+
 }
 
 footer {
@@ -29,8 +32,8 @@ footer {
     box-sizing: border-box;
     padding-top: 1px;
     text-align: center;
-    color: gray;
-    background-color: rgb(60, 65, 66);
+    color: black;
+    background-color: rgb(169, 169, 169)
 }
 
 footer>p {
