--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,14 +67,21 @@ footer>p {
     float: right;
 }
 
-#message-box #messages {
-    height: 0px;
-    padding-top: 40px;
+#message-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #messages1 {
-    margin-top: 10;
+    margin-top: 20px;
 }
+
+#messages {
+    margin-top: 10px;
+}
+
 
 #player-image {
     width: 50%;
