--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html {
 
 body {
     font-family: 'oswald', sans serif;
-    background-color: rgb(169, 169, 169);
+    background-color: #5f5f61;
     margin: 0;
     padding: 0;
 }
@@ -17,7 +17,7 @@ body {
 header {
     text-align: center;
     margin: auto;
-    background-color: rgb(169, 169, 169);
+    background-color: #5f5f61;
     color: black;
 
 }
@@ -33,7 +33,7 @@ footer {
     padding-top: 1px;
     text-align: center;
     color: black;
-    background-color: rgb(169, 169, 169)
+    background-color: #5f5f61;
 }
 
 footer>p {
@@ -58,7 +58,7 @@ footer>p {
 }
 
 .player {
-    background-color: blue;
+    background-color: green;
     float: left;
 }
 
@@ -75,7 +75,7 @@ footer>p {
 }
 
 #messages1 {
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 #messages {
@@ -148,7 +148,7 @@ footer>p {
     }
 
     .player {
-        background-color: blue;
+        background-color: green;
         float: left;
         height: 350px;
         width: 300px;
