--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html {
 
 body {
     font-family: 'oswald', sans serif;
-    background-color: #5f5f61;
+    background-color: lightgrey;
     margin: 0;
     padding: 0;
 }
@@ -17,7 +17,7 @@ body {
 header {
     text-align: center;
     margin: auto;
-    background-color: #5f5f61;
+    background-color:lightgrey;
     color: black;
 
 }
