--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,11 +60,13 @@ footer>p {
 .player {
     background-color: green;
     float: left;
+    margin-left: -50px;
 }
 
 .computer {
     background-color: red;
     float: right;
+    margin-right: -50px;
 }
 
 #message-box {
@@ -72,14 +74,24 @@ footer>p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#vs {
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+    margin: 10px 0;
+
 }
 
 #messages1 {
-    margin-top: 30px;
+   
 }
 
 #messages {
-    margin-top: 10px;
+   
 }
 
 
