--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,27 +71,29 @@ footer>p {
 
 #message-box {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 100px;
+    position: relative;
 }
 
 #vs {
     text-align: center;
+    position: fixed;
     font-size: 40px;
     font-weight: bold;
-    margin: 10px 0;
-
+    margin: 0 20px;
+    
 }
 
 #messages1 {
-   
+   margin-left: 80px;
+ 
 }
 
 #messages {
-   
+    margin-right: 80px;
+
 }
 
 
