--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ footer {
     padding-top: 1px;
     text-align: center;
     color: black;
-    background-color: #5f5f61;
+    background-color: lightgray;
 }
 
 footer>p {
@@ -124,39 +124,56 @@ footer>p {
 }
 
 /* Media query for smaller screnes*/
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
     .game-area {
         width: 90%;
         margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .selector {
         width: 100%;
         margin: 10px 0;
-
     }
 
-    .player,
-    .computer {
+    .player, .computer {
         width: 100%;
+        max-width: 100%;
+        height: auto;
         float: none;
+        margin: 10px 0;
     }
 
-    #messages {
-        display: none;
+    #messages, #messages1 {
+        font-size: 16px;
+        margin: 0 20px;
     }
 
-    footer {
-        display: none;
+    #vs {
+        font-size: 30px;
+        position: relative;
+        margin: 10px 0;
+    }
+
+    #message-box {
+        order: 2;
+        margin-top: 20px;
+    }
+
+    .player {
+        order: 1;
     }
 
     .computer {
-        width: 100%;
+        order: 3;
     }
+
 }
 
 /* Media query for bigger screnes*/
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1100px) {
     footer {
         display: none;
     }
