--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@ header {
 }
 
 footer {
-    position: absolute;
     width: 100%;
     height: 140px;
     min-height: 25px;
@@ -124,7 +123,7 @@ footer>p {
 }
 
 /* Media query for smaller screnes*/
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 820px) {
     .game-area {
         width: 90%;
         margin-top: 20px;
@@ -134,16 +133,19 @@ footer>p {
     }
 
     .selector {
-        width: 100%;
-        margin: 10px 0;
+        display: inline-block;
     }
 
     .player, .computer {
-        width: 100%;
+        width: 60%;
         max-width: 100%;
         height: auto;
         float: none;
         margin: 10px 0;
+    }
+
+    footer {
+        
     }
 
     #messages, #messages1 {
@@ -174,10 +176,7 @@ footer>p {
 
 /* Media query for bigger screnes*/
 @media only screen and (min-width: 1100px) {
-    footer {
-        display: none;
-    }
-
+    
     .player {
         background-color: green;
         float: left;
